# stm32_bootloader

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
docs/: README.md  bootloader_architecture.drawio  bootloader_boot_sequence.drawio  bootloader_state_machine_diagram.drawio
etc/: README.md
projects/: README.md  arm-none-eabi-gcc.cmake  private_key.pem  public_key.pem
projects/app/: CMakeLists.txt  README.md  app.ioc
projects/app/Core/Inc/: main.h  stm32f4xx_it.h
projects/app/Core/Src/: main.c  stm32f4xx_it.c
projects/app/boards/stm32f401re/: STM32F401RETx_FLASH.ld
projects/app/boards/stm32f401re/Src/: stm32f4xx_hal_msp.c
projects/app/src/: btstack_config.h  main.c  main.h
projects/bootloader/: CMakeLists.txt  README.md  hal-drivers.cmake  uECC-lib.cmake
projects/bootloader/boards/stm32f401re/: STM32F401RETx_FLASH.ld  startup_stm32f401xe.s
projects/bootloader/boards/stm32f401re/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
projects/bootloader/boards/stm32f401re/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
projects/bootloader/src/: main.c  main.h  main_bkp.c  main_fsm.c
projects/bootloader/src/authentication/: authentication.c  authentication.h  ecdsa_pub_key.h  sha256.c  sha256.h
projects/bootloader/src/com_protocol/: com_protocol.c  com_protocol.h
projects/bootloader/src/drivers/: common.h  user_input.c  user_input.h
projects/bootloader/src/drivers/crc/: crc_apis.c  crc_apis.h  crc_driver.c  crc_driver.h
projects/bootloader/src/drivers/flash/: flash_apis.c  flash_apis.h  flash_driver.c  flash_driver.h
projects/bootloader/src/drivers/mpu/: mpu_driver.c  mpu_driver.h
projects/bootloader/src/drivers/sys/: sys.c  sys.h  sys_init.c  sys_init.h
projects/bootloader/src/drivers/uart/: uart_driver.c  uart_driver.h
projects/bootloader/src/firmware_update/: firmware_update.c  firmware_update.h
scripts/: README.md  build.sh  create_dfu_image.py
scripts/build_tools/: README.md  build.sh  build_info.yaml  create_dfu_image.py  extract_public_key.py
scripts/firmware_update_tools/: README.md  bootloader_tool.py  create_dfu_image.py
